edition = "2023";

package rgst.klefki.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "git.rgst.io/internal/grpc/generated/go/rgst/klefki/v1";

message GetKeyRequest {
  string machine_id = 1;
  bytes signature = 2;
  string nonce = 3;
}

message GetKeyResponse {
  bytes key = 1;
}

service KlefkiService {
  rpc GetKey(GetKeyRequest) returns (GetKeyResponse);
}
